alignment corrections

--- a/assets/cssnews/main.css
+++ b/assets/cssnews/main.css
@@ -1,3 +1,7 @@
+main{
+	margin-left: 250px;
+	
+}
 main section article h3 a{
 	color: #f15a08;
 	text-transform: uppercase;
